# azure-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES_2026-03-01.md  Dockerfile.backend  Dockerfile.frontend  EXAMPLE_USAGE.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION.md  PHASE3_RESOURCE_TRACKING.md  PHASE4_FRONTEND.md  PROJECT_STATUS.md  README.md  SUMMARY_2026-03-01.md  docker-compose.test.yml  docker-compose.yml  index.html
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_add_budget_limit_to_projects.py  002_create_deployed_resources.py
backend/app/: config.py  database.py  db_types.py  main.py
backend/app/api/: audit.py  auth.py  azure_connections.py  deployments.py  deps.py  pricing.py  projects.py  proposals.py  templates.py
backend/app/core/: __init__.py  rbac.py  security.py  tenant_context.py
backend/app/models/: __init__.py  audit.py  azure_connection.py  conversation.py  deployed_resource.py  deployment.py  deployment_resource.py  execution.py  execution_log.py  message.py  pricing_cache.py  project.py  proposal.py  proposal_option.py  template.py  tenant.py  user.py
backend/app/schemas/: __init__.py  azure_connection.py  deployment.py  execution.py  project.py  proposal.py  template.py  tenant.py  user.py
backend/app/services/: __init__.py  ai_engine.py  api_version_manager.py  audit_service.py  azure_connection_service.py  cost_estimator.py  deployment_service.py  executor.py  pricing_service.py  proposal_service.py  quota_checker.py  resource_discovery.py  (+3 more)
(+45 files in other folders)
